# ZMK-joystick

./: sofle.dtsi
.github/workflows/: build.yml
app/: CMakeLists.txt
app/drivers/: CMakeLists.txt
app/drivers/joystick_mouse/: CMakeLists.txt  Kconfig  joystick_behavior.c  joystick_behavior.h  joystick_mouse.c  joystick_mouse.h
boards/arm/nicekeyboards/nice_nano/: nice_nano_nrf52840_zmk.dts
config/: CMakeLists.txt  Kconfig.defconfig  behavior-joystick-to-keys.dtsi  board.overlay  build.yml  joystick.overlay  joystick_pins.overlay  keymap.dtsi  prj.conf  sofle.conf  sofle.dtsi  sofle.keymap  west.yml
config/app/src/: main.c
config/behaviors/: joystick_behavior.dtsi
config/drivers/joystick/: CMakeLists.txt  joystick.c  joystick.h
